# pvr.zattoo

./: .gitignore  .openelec-unpack  .travis.yml  CMakeLists.txt  FindRapidJSON.cmake  FindSqlite3.cmake  FindTinyXML2.cmake  FindYajl.cmake  README.md  azure-pipelines.yml  id_travis.enc  package.mk
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/jsoncpp/: CMakeLists.txt
depends/common/rapidjson/: 0001-disable-valgrind_unittest.diff  0002-no-jsoncheckertest.diff  0005-Fix-Wsign-conversion-warnings-errors.patch  0006-Suppress-Wformat-overflow-warning-error.patch  0007-python3.diff  0008-support-IBM-PowerPC-ppc64-ppc64le-and-XL-compiler.patch  0009-CMake-do-not-pass-march-native-or-mcpu-native-when-c.patch  0010-deal-with-Werror-type-limits.patch  flags.txt  rapidjson.sha256  rapidjson.txt
depends/common/sqlite3/: 01-disable-bin.patch  CMakeLists.txt  sqlite3.txt
depends/common/tinyxml2/: 01-lib-debug-postfix.patch  tinyxml2.txt
depends/common/yajl/: yajl.txt
depends/windows/sqlite3/: CMakeLists.txt  sqlite3.sha256
depends/windows/tinyxml2/: 01-lib-debug-postfix.patch  tinyxml2.txt
depends/windowsstore/tinyxml2/: tinyxml2.sha256
lib/cpr/: CMakeLists.txt  FindCPR.cmake
lib/sqlite/: CMakeLists.txt
pvr.zattoo/: addon.xml  addon.xml.in  changelog.txt
pvr.zattoo/resources/: eit_categories.txt  settings.xml
pvr.zattoo/resources/language/resource.language.de_de/: strings.po
pvr.zattoo/resources/language/resource.language.en_gb/: strings.po
src/: Cache.cpp  Cache.h  Curl.cpp  Curl.h  HTTPSocket.cpp  HTTPSocket.h  JsonParser.cpp  JsonParser.h  Session.cpp  Session.h  Settings.cpp  Settings.h  UpdateThread.cpp  UpdateThread.h  Utils.cpp  Utils.h  XmlTV.cpp  XmlTV.h  ZatChannel.h  ZatData.cpp  ZatData.h  categories.cpp  categories.h  client.cpp  client.h  md5.cpp  md5.h  to_string.h  windows.h
src/epg/: EnhancedEpgProvider.cpp  EnhancedEpgProvider.h  EpgProvider.cpp  EpgProvider.h  XmlTVEpgProvider.cpp  XmlTVEpgProvider.h  ZattooEpgProvider.cpp  ZattooEpgProvider.h
src/http/: Cache.cpp  Cache.h  Curl.cpp  Curl.h  HttpClient.cpp  HttpClient.h  HttpStatusCodeHandler.h
src/sql/: EpgDB.cpp  EpgDB.h  ParameterDB.cpp  ParameterDB.h  RecordingsDB.cpp  RecordingsDB.h  SQLConnection.cpp  SQLConnection.h
